# tic_tac_toe_fastapi

./: .gitignore  Makefile  Readme.md  alembic.ini  pyproject.toml  requirements.txt
backend/: config.py  database.py  main.py  test_main.py
backend/app/api/v1/: games.py  users.py  websocket.py
backend/app/models/: __init__.py  game.py  user.py
backend/app/schema/: __init__.py  game.py  user.py
backend/app/services/: game.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 5f16e2a8ffcb_multiplayer.py  987dfddfd64f_init.py
frontend/: index.html
